updated and added Entity, Test Class & Service classes